--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
         - name: nuodb-operator
           # Replace this with the built image name
-          image: quay.io/ashukl/nuodb-operator:latest
+          image: quay.io/nuodb/nuodb-operator:latest
           imagePullPolicy: Always
           env:
             - name: WATCH_NAMESPACE
