--- a/deploy/operatorGroup.yaml
+++ b/deploy/operatorGroup.yaml
@@ -2,7 +2,7 @@ apiVersion: operators.coreos.com/v1alpha2
 kind: OperatorGroup
 metadata:
   name: nuodb-operator-group
-  namespace: nuodb-test1
+  namespace: nuodb
   spec:
     targetNamespaces:
     - default
