default namespace for operator

--- a/deploy/olm-catalog/nuodb-operator/0.0.4/nuodb.v0.0.4.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/nuodb-operator/0.0.4/nuodb.v0.0.4.clusterserviceversion.yaml
@@ -26,7 +26,7 @@ metadata:
     repository: https://github.com/nuodb/nuodb-operator
     support: NuoDB, Inc.
   name: nuodb-operator.v0.0.4
-  namespace: "nuodb-test1"
+  namespace: "placeholder"
 spec:
   apiservicedefinitions: {}
   customresourcedefinitions:
