--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -12,7 +12,7 @@ spec:
       labels:
         name: nuodb-operator
     spec:
-      serviceAccountName: default
+      serviceAccountName: nuodb-operator
       containers:
         - name: nuodb-operator
           # Replace this with the built image name
