--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,6 @@ install:
 - scripts/install-deps
 
 before_script:
-# Following is just to demo that the kubernetes cluster works.
-# script/env-values.sh
 - scripts/verify_operator
 # scripts/build-operator
 - sudo minikube start --vm-driver=none --kubernetes-version=v1.15.0 --memory=8000 --cpus=4
@@ -43,22 +41,8 @@ before_script:
 - kubectl get nodes
 
 script:
-# Following is just to demo that the kubernetes cluster works.
-- kubectl cluster-info
-# Verify kube-addon-manager.
-# kube-addon-manager is responsible for managing other kubernetes components, such as kube-dns, dashboard, storage-provisioner..
-- JSONPATH='{range .items[*]}{@.metadata.name}:{range @.status.conditions[*]}{@.type}={@.status};{end}{end}'; until kubectl -n kube-system get pods -lcomponent=kube-addon-manager -o jsonpath="$JSONPATH" 2>&1 | grep -q "Ready=True"; do sleep 1;echo "waiting for kube-addon-manager to be available"; kubectl get pods --all-namespaces; done
-# Wait for kube-dns to be ready.
-- JSONPATH='{range .items[*]}{@.metadata.name}:{range @.status.conditions[*]}{@.type}={@.status};{end}{end}'; until kubectl -n kube-system get pods -lk8s-app=kube-dns -o jsonpath="$JSONPATH" 2>&1 | grep -q "Ready=True"; do sleep 1;echo "waiting for kube-dns to be available"; kubectl get pods --all-namespaces; done
-#Install OLM on minikube
-- kubectl apply -f https://github.com/operator-framework/operator-lifecycle-manager/releases/download/0.11.0/crds.yaml
-- kubectl apply -f https://github.com/operator-framework/operator-lifecycle-manager/releases/download/0.11.0/olm.yaml
-# Test nuodb-operator
-- kubectl get nodes
-
+# Test with operator-sdk scorecard
 - scripts/test_scorecard_git.sh
+
+# Test the nuodb deployment with operator olm
 - scripts/test_operator.sh
-# Create example Redis deployment on Kubernetes.
-#- kubectl run travis-example --image=redis --labels="app=travis-example"
-# Make sure created pod is scheduled and running.
-#- JSONPATH='{range .items[*]}{@.metadata.name}:{range @.status.conditions[*]}{@.type}={@.status};{end}{end}'; until kubectl -n default get pods -lapp=travis-example -o jsonpath="$JSONPATH" 2>&1 | grep -q "Ready=True"; do sleep 1;echo "waiting for travis-example deployment to be available"; kubectl get pods -n default; done
