--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ install:
 before_script:
 - eval scripts/ci/verify_operator.sh
 - scripts/ci/build_operator.sh
+- echo "Image Tag $NUODB_OP_IMAGE"
 - sudo minikube start --vm-driver=none --kubernetes-version=v1.15.0 --memory=8000 --cpus=4
 - "sudo chown -R travis: /home/travis/.minikube/"
 - kubectl cluster-info
@@ -42,7 +43,7 @@ before_script:
 
 script:
 # Test with operator-sdk scorecard
-- scripts/ci/test_scorecard.sh
+- scripts/ci/test_scorecard.sh $NUODB_OP_IMAGE
 
 # Test the nuodb deployment with operator olm
 - scripts/ci/test_operator.sh
